# zlang

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  abstract_syntax_tree.c  abstract_syntax_tree.h  build_and_run.sh  constants.h  docker-compose.yaml  for_test_instructions.zl  interpreter.c  interpreter.h  interpreters.c  interpreters.h  language_grammar  lexer.c  lexer.h  main.c  op_s.h  operators.h  parser.c  parser.h  test.amam  test.zl  testprint.amam  tests.c  tests.h  tokenizer.c  tokenizer.h  while_for_test_instructions.zl  while_test_instructions.zl
